# graph-generator

./: .gitignore  .mypy.ini  Dockerfile  LICENSE  README.md  THIRD-PARTY-LICENSES.txt  example_requests.http  pyproject.toml
src/: main.py
src/converter/: models.py  router.py
src/generator/: models.py  router.py
src/generator/services/: classes.py  exceptions.py  generate_topology.py  weighted_graph.py
src/generator/services/clustering/: kmeans.py
src/generator/services/graph/: edges.py  nodes.py
src/generator/services/pop/: _pop_structure.py  pops.py
src/generator/services/random/: random.py
src/generator/services/topology/: _helper.py  delaunay.py  gabriel.py  ring.py
tests/: test_converter.py  test_generator.py
