[tool.poetry]
name = "graphgenerator"
version = "1.0.0"
description = "Generating Service Provider Network Topologies"
authors = [
    "Lukas Ribi <lukas.ribi@ost.ch>",
    "Pascal Christen <pascal.christen@ost.ch>"
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
scikit-learn = "^1.2.2"
python-tsp = "^0.3.1"
networkx = ">=2.1,<3.0"
numpy = "^1.24.3"
pydantic = "^1.10.7"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
httpx = "^0.23.3"
licensecheck = "^2023.1.1"
setuptools = "^67.6.0"
mypy = "^1.2.0"
third-party-license-file-generator = "^2023.2.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
